--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "lernDieUhr",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "dependencies": {
-    "connect": "2.14.3",
-    "serve-static": "~1.7.1",
-    "socket.io": "~1.2.1"
+    "connect": "*",
+    "cookies": "*",
+    "serve-static": "*",
+    "socket.io": "*"
   }
 }
