--- a/.gitignore
+++ b/.gitignore
@@ -6535,3 +6535,8 @@ node_modules/ws/lib/subprotocol.js
 node_modules/ws/lib/validation.js
 node_modules/ws/lib/websocket-server.js
 node_modules/ws/lib/websocket.js
+githubAccessToken.txt
+app.js.new
+mokikz-docker meetup.key
+qr-eltmann-test.png
+rechnen.zip
