--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,15 +24,15 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build and Push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/lerndieuhr:v6.0
