updated docker base image

--- a/.gitignore
+++ b/.gitignore
@@ -6540,3 +6540,9 @@ app.js.new
 mokikz-docker meetup.key
 qr-eltmann-test.png
 rechnen.zip
+Dokumente/Rechnungen/63778822.pdf
+Dokumente/Rechnungen/75766902.pdf
+Dokumente/Rechnungen/89260901.pdf
+Dokumente/Rechnungen/DigitalOcean-Einzahlung-Mai.pdf
+Dokumente/Rechnungen/DigitalOcean-Mai.pdf
+Dokumente/Rechnungen/Domain Auftragsbestätigung.pdf
